--- a/Android/Guillegram/app/src/main/res/values/strings.xml
+++ b/Android/Guillegram/app/src/main/res/values/strings.xml
@@ -1,7 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Guillegram</string>
     <string name="title_activity_ref">RefActivity</string>
     <string name="hint_username">Nombre de usuario</string>
     <string name="hint_password">Contraseña</string>
     <string name="txt_btn_login">Login</string>
+    <string name="dont_have_account">¿No tienes cuenta?,</string>
+    <string name="create_here">crear aquí</string>
+    <string name="hint_email">Correo</string>
+    <string name="hint_name">Nombre</string>
+    <string name="hint_user">Usuario</string>
+    <string name="hint_confirm_password">Confirmar contraseña</string>
+    <string name="txt_btn_joinUs">Únete</string>
+    <string name="toolbar_title_createAccount">Crear cuenta</string>
 </resources>
