--- a/Android/Guillegram/app/src/main/res/values-en/strings.xml
+++ b/Android/Guillegram/app/src/main/res/values-en/strings.xml
@@ -5,4 +5,12 @@
     <string name="hint_username">Username</string>
     <string name="hint_password">Password</string>
     <string name="txt_btn_login">Login</string>
+    <string name="dont_have_account">Don\'t have account?,</string>
+    <string name="create_here">create here</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_name">Name</string>
+    <string name="hint_user">User</string>
+    <string name="hint_confirm_password">Confirm password</string>
+    <string name="txt_btn_joinUs">Join us</string>
+    <string name="toolbar_title_createAccount">Crate account</string>
 </resources>
