Pantalla de detalles creada

--- a/Android/Guillegram/app/src/main/res/values-en/strings.xml
+++ b/Android/Guillegram/app/src/main/res/values-en/strings.xml
@@ -13,6 +13,7 @@
     <string name="hint_confirm_password">Confirm password</string>
     <string name="txt_btn_joinUs">Join us</string>
     <string name="toolbar_title_createAccount">Crate account</string>
+    <string name="toolbar_title_home">Home</string>
     <string name="username_example">Guillejemplo</string>
     <string name="firstword_card">Ago</string>
     <string name="timecard_card">4 days</string>
