--- a/Android/Guillegram/app/src/main/res/values/strings.xml
+++ b/Android/Guillegram/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="hint_confirm_password">Confirmar contraseña</string>
     <string name="txt_btn_joinUs">Únete</string>
     <string name="toolbar_title_createAccount">Crear cuenta</string>
+    <string name="toolbar_title_home">Home</string>
     <string name="username_example">Guillejemplo</string>
     <string name="firstword_card">Hace</string>
     <string name="timecard_card">4 días</string>
