Icon + FIX bugs ActionBar

--- a/Android/Guillegram/app/src/main/res/values-en/strings.xml
+++ b/Android/Guillegram/app/src/main/res/values-en/strings.xml
@@ -21,4 +21,5 @@
     <string name="tab_search">Search</string>
     <string name="tab_home">Home</string>
     <string name="tab_profile">Profile</string>
+    <string name="second_word_detail">Me gusta</string>
 </resources>
