Fixed buttonNavigation position

--- a/Android/Guillegram/app/src/main/res/values-en/strings.xml
+++ b/Android/Guillegram/app/src/main/res/values-en/strings.xml
@@ -12,7 +12,7 @@
     <string name="hint_user">User</string>
     <string name="hint_confirm_password">Confirm password</string>
     <string name="txt_btn_joinUs">Join us</string>
-    <string name="toolbar_title_createAccount">Crate account</string>
+    <string name="toolbar_title_createAccount">Create account</string>
     <string name="toolbar_title_home">Home</string>
     <string name="username_example">Guillejemplo</string>
     <string name="firstword_card">Ago</string>
@@ -21,5 +21,8 @@
     <string name="tab_search">Search</string>
     <string name="tab_home">Home</string>
     <string name="tab_profile">Profile</string>
-    <string name="second_word_detail">Me gusta</string>
+    <string name="second_word_detail">Like</string>
+    <string name="lorem">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
+    <string name="titleimage_detail">\"Tarde de Otoño\"</string>
+
 </resources>
